--- a/backend/package.json
+++ b/backend/package.json
@@ -12,9 +12,15 @@
   "license": "MIT",
   "dependencies": {
     "@graphile/pg-pubsub": "^4.5.0",
+    "body-parser": "^1.19.0",
     "config": "^3.2.6",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "http": "0.0.0",
-    "postgraphile": "^4.5.5"
+    "node-pushnotifications": "^1.2.1",
+    "pg-listen": "^1.5.0",
+    "postgraphile": "^4.5.5",
+    "web-push": "^3.4.3"
   }
 }
